# AI_Security_Graph

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUN_PROJECT.md  SECURITY.md  bandit_report.json  demo_apt.py  demo_guardrails.py  demo_rag.py  demo_script.sh  demo_tier1.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  safety_report.json  scratch_cleaner.py  task.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
config/: audit_trail.db  golden_baseline.json  system_settings.yaml
data/: bandit-results.json  datatest.json  demo_10k.json  test_mutual_exclusive.py  test_status.py  trivy-results.json
demo_outputs/: TEST_REPORT.md  apt_alerts.json  knowledge_graph.json  mlflow_run_summary.txt  pipeline_summary.md  vulnerability_report.md
demos/: demo_guardrails.py  demo_rag.py  demo_tier1.py
docs/: DAY1.md  DAY2.md  DAY3.md  METRICS_SUMMARY.md  REPRODUCIBILITY.md  SENTINEL_Progress_Report.docx  SENTINEL_Progress_Report.md  SYNC_REPORT.md  apt_vulnerability_design.md  architecture.md  capstone_proposal.md  codebase_summary.md  comprehensive_technical_architecture.md  research_roadmap.md  threat_model.md
experiments/: E2E_TESTS_GUIDE.md  README.md  _eval_isolation.py  ablation_design.md  ablation_results.json  action_scoring.py  adversarial_pipeline_results.json  adversarial_samples.json  audit_tier_capability.py  build_golden_baseline.py  e2e_test_runner.py  evaluate_accuracy.py  evaluate_adversarial.py  evaluate_adversarial_pipeline.py  evaluate_guardrails.py  evaluate_latency.py  evaluate_ml_gate.py  evaluate_reasoning.py  evaluate_robustness.py  evaluate_tier2_decision.py  evaluate_unified_stream.py  evaluate_zeroday.py  ground_truth.json  ground_truth_webattacks.json  measure_latency_baseline.py  plot_results.py  reasoning_eval_results.json  reasoning_ground_truth.json  robustness_results.json  run_ablation.py  run_ablation_balanced.py  run_ablation_bcde.py  run_ablation_study.py  run_apt_negative_control.py  run_context_stress.py  run_llm_robustness.py  run_threshold_sensitivity.py  run_zeroday_graded.py  statistical_tests.py  stream_unified_online.py  (+4 more)
knowledge_base/: checksums.sha256  iso_27001_controls.json  mitre_attack.json  nist_800_61r2.json
ml_lab/: build_100k_cicids.py  build_100k_dataset.py  build_1m_dataset.py  tier_2_model.pkl  train_1m.py  train_1m_metrics.json  train_50k_model.py  train_and_compare.ipynb  train_and_compare.py  training_report.md
reports/: test_report_20260513.md  test_report_20260515.md  test_report_20260527.md  test_report_20260529.md  test_report_20260601.md  test_report_FINAL.md  unified_stream_evaluation_report.md  zeroday_evaluation_report.md
scripts/: antigravity_history_sync.py  build_adversarial_suite.py  build_dapt_chains.py  build_dataset.py  build_datatest.py  build_demo.py  build_demo_small.py  build_knowledge_base.py  cleanup.sh  (+22 more)
(+261 files in other folders)
